--- a/3/donate/index.html
+++ b/3/donate/index.html
@@ -126,10 +126,10 @@
     <div class="ui equal width stackable internally celled grid">
         <div class="center aligned row">
             <div class="column">
-                <img class="ui centered medium rounded bordered image" src="/images/donate/alipay.jpg" alt="alipay.jpg">
+                <img class="ui centered medium rounded bordered image" src="3/images/donate/alipay.jpg" alt="alipay.jpg">
             </div>
             <div class="column">
-                <img class="ui centered medium rounded bordered image" src="/images/donate/wechat.jpg" alt="wechat.jpg">
+                <img class="ui centered medium rounded bordered image" src="3/images/donate/wechat.jpg" alt="wechat.jpg">
             </div>
         </div>
     </div>
