geng  gai  dao hang  buzhong yao

--- a/3/donate/index.html
+++ b/3/donate/index.html
@@ -73,7 +73,7 @@
     </div>
 </div>
     <div class="ui vertical inverted sidebar menu">
-    <a class="item loading-trigger" href="/"><i class="star icon"></i>北邮人导航</a>
+    <a class="item loading-trigger" href="/"><i class="star icon"></i>23niu.ga导航</a>
 <a class="item loading-trigger" href="/analytics/"><i class="line chart icon"></i>访客分析</a>
 <a class="active item loading-trigger" href="/donate/"><i class="brown coffee icon"></i>爱心投喂</a>
     <a class="item" href="https://github.com/BYR-Navi/BYR-Navi" target="_blank"><i class="github icon"></i>GitHub</a>
