--- a/donate/index.html
+++ b/donate/index.html
@@ -73,7 +73,7 @@
     </div>
 </div>
     <div class="ui vertical inverted sidebar menu">
-    <a class="item loading-trigger" href="/"><i class="star icon"></i>北邮人导航</a>
+    <a class="item loading-trigger" href="/"><i class="star icon"></i>23niu.ga导航</a>
 <a class="item loading-trigger" href="/analytics/"><i class="line chart icon"></i>访客分析</a>
 <a class="active item loading-trigger" href="/donate/"><i class="brown coffee icon"></i>爱心投喂</a>
     <a class="item" href="https://github.com/BYR-Navi/BYR-Navi" target="_blank"><i class="github icon"></i>GitHub</a>
@@ -83,7 +83,7 @@
             <div class="ui container">
     <div class="ui large secondary inverted pointing menu" style="border: none;">
         <a class="toc item"><i class="sidebar icon"></i></a>
-        <a class="item loading-trigger" href="/"><i class="star icon"></i>北邮人导航</a>
+        <a class="item loading-trigger" href="/"><i class="star icon"></i>23niu导航</a>
 <a class="item loading-trigger" href="/analytics/"><i class="line chart icon"></i>访客分析</a>
 <a class="active item loading-trigger" href="/donate/"><i class="brown coffee icon"></i>爱心投喂</a>
         <div class="right menu">
@@ -178,7 +178,7 @@
                 </div>
             </div>
             <div class="seven wide column">
-                <h4 class="ui inverted header">北邮人导航 · BYR-Navi</h4>
+                <h4 class="ui inverted header">23niu导航 · BYR-Navi</h4>
                 <div class="ui inverted link list">
                     <div class="item">&copy; 2017 TEELAB</div>
                     <div class="item">Designed and built with all the love and passion in the world by iROCKBUNNY.</div>
