--- a/index.htm
+++ b/index.htm
@@ -16,11 +16,11 @@
 <meta property="og:url" content="http://falin.xyz/" />
 <meta property="og:site_name" content="23niu导航 · 23niu.ga" />
 <script type="application/ld+json">
-{"@context":"http://schema.org","@type":"WebSite","name":"simoge23导航 · Falin Navigation","headline":"微信：simoge23 导航 ","author":{"@type":"Person","name":"小编"},"description":"专注于提高工作效率","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://falin.xyz/images/logo.png"},"name":"小编"},"url":"http://falin.xyz/"}</script>
+{"@context":"http://schema.org","@type":"WebSite","name":"simoge23导航 · 23niu.ga","headline":"微信：simoge23 导航 ","author":{"@type":"Person","name":"小编"},"description":"专注于提高工作效率","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://falin.xyz/images/logo.png"},"name":"小编"},"url":"http://23niu.ga/"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <meta name=description content="法林导航，专属于法律人的网址导航，专注于提高法律人工作效率" />
-    <meta name="keywords" content="法林导航, Falin-Navi, falin, Navi, Navigation, 法律导航,网址导航" />
+    <meta name=description content="23niu导航，网址导航，专注于提高工作效率" />
+    <meta name="keywords" content="23niu导航, 23niu.ga导航,网址导航" />
     <meta name="robots" content="all" />
     <link rel="stylesheet" type="text/css" href="//cdn.bootcss.com/semantic-ui/2.2.10/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/customize.css">
