--- a/3/index.htm
+++ b/3/index.htm
@@ -80,7 +80,7 @@
             <div class="ui container">
     <div class="ui large secondary inverted pointing menu" style="border: none;">
         <a class="toc item"><i class="sidebar icon"></i></a>
-        <a class="active item loading-trigger" href="/"><i class="yellow star icon"></i>法林导航</a>
+        <a class="active item loading-trigger" href="/"><i class="yellow star icon"></i>23niu导航</a>
 <a class="item loading-trigger" href="/analytics/"><i class="line chart icon"></i>检索指南</a>
 <a class="item loading-trigger" href="/donate/"><i class="coffee icon"></i>关于本站 </a>
 
