--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
     <div class="ui large top fixed borderless hidden menu">
     <div class="ui container">
         <a class="active item loading-trigger" href="/"><i class="yellow star icon"></i>simoge23导航</a>
-<a class="item loading-trigger" href="analytics/index.htm"><i class="line chart icon"></i>检索指南</a>
+<a class="item loading-trigger" href="analytics/index.htm"><i class="line chart icon"></i>支持打赏</a>
 <a class="item loading-trigger" href="/donate/"><i class="coffee icon"></i>关于本站 </a>
 
 <!--
@@ -45,7 +45,7 @@
 	描述：
 	左上角导航  
 	<a class="active item loading-trigger" href="/"><i class="yellow star icon"></i>simoge23导航</a>
-<a class="item loading-trigger" href="analytics/index.htm"><i class="line chart icon"></i>检索指南</a>
+<a class="item loading-trigger" href="analytics/index.htm"><i class="line chart icon"></i>支持打赏</a>
 <a class="item loading-trigger" href="/donate/"><i class="coffee icon"></i>关于本站 </a>
 
 -->
@@ -66,7 +66,7 @@
     <a class="active item loading-trigger" href="/"><i class="yellow star icon"></i>微信搜索：simoge23--23niu导航</a>
     
     <!-- 不能跳转 是应为 前面多了一个/   -->
-<a class="item loading-trigger" href="analytics/index.htm"><i class="line chart icon"></i>检索指南</a>
+<a class="item loading-trigger" href="analytics/index.htm"><i class="line chart icon"></i>支持打赏</a>
 
 
 
@@ -80,8 +80,8 @@
             <div class="ui container">
     <div class="ui large secondary inverted pointing menu" style="border: none;">
         <a class="toc item"><i class="sidebar icon"></i></a>
-        <a class="active item loading-trigger" href="/"><i class="yellow star icon"></i>法林导航</a>
-<a class="item loading-trigger" href="/analytics/"><i class="line chart icon"></i>检索指南</a>
+        <a class="active item loading-trigger" href="/"><i class="yellow star icon"></i>23niu导航</a>
+<a class="item loading-trigger" href="/analytics/"><i class="line chart icon"></i>支持打赏</a>
 <a class="item loading-trigger" href="/donate/"><i class="coffee icon"></i>关于本站 </a>
 
         <div class="right menu">
@@ -324,7 +324,7 @@
                 </div>
             </div>
             <div class="seven wide column">
-                <h4 class="ui inverted header">法林导航 · Falin Navigation</h4>
+                <h4 class="ui inverted header">23niu导航 · Falin Navigation</h4>
                 <div class="ui inverted link list">
                     <div class="item">&copy; 2017 </div>
                     <div class="item">Designed and built with all the love and passion in the world by 张明浩.</div>
