--- a/donate/index.html
+++ b/donate/index.html
@@ -76,7 +76,7 @@
     <a class="item loading-trigger" href="/"><i class="star icon"></i>23niu.ga导航</a>
 <a class="item loading-trigger" href="/analytics/"><i class="line chart icon"></i>访客分析</a>
 <a class="active item loading-trigger" href="/donate/"><i class="brown coffee icon"></i>爱心投喂</a>
-    <a class="item" href="https://github.com/BYR-Navi/BYR-Navi" target="_blank"><i class="github icon"></i>GitHub</a>
+    <a class="item" href="http://weibo.com/3986413583/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" target="_blank"><!--<i class="github icon"></i>-->微博</a>
 </div>
     <div class="pusher">
         <div class="ui inverted vertical masthead center aligned segment zoomed">
@@ -87,7 +87,7 @@
 <a class="item loading-trigger" href="/analytics/"><i class="line chart icon"></i>访客分析</a>
 <a class="active item loading-trigger" href="/donate/"><i class="brown coffee icon"></i>爱心投喂</a>
         <div class="right menu">
-            <a class="item" href="https://github.com/BYR-Navi/BYR-Navi" target="_blank"><i class="github icon"></i>GitHub</a>
+            <a class="item" href="http://weibo.com/3986413583/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" target="_blank"><--<i class="github icon"></i>-->微博</a>
         </div>
     </div>
 </div>
