--- a/analytics/index.html
+++ b/analytics/index.html
@@ -87,7 +87,7 @@
 <a class="item loading-trigger" href="/analytics/"><i class="line chart icon"></i>访客分析</a>
 <a class="active item loading-trigger" href="/donate/"><i class="brown coffee icon"></i>爱心投喂</a>
         <div class="right menu">
-            <a class="item" href="http://weibo.com/3986413583/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" target="_blank"><--<i class="github icon"></i>-->微博</a>
+            <a class="item" href="http://weibo.com/3986413583/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1" target="_blank"><!--<i class="github icon"></i>-->微博</a>
         </div>
     </div>
 </div>
