--- a/cdn/tzyhj.html
+++ b/cdn/tzyhj.html
@@ -4,10 +4,25 @@
 		<meta charset="UTF-8">
 		<title></title>
 		
-		<!-- https://temai.m.taobao.com/new/index.htm?pid=mm_118760083_29772699_127326-->
+		<!--移动无线： 
+			爱淘宝优惠券：https://temai.m.taobao.com/new/index.htm?pid=mm_118760083_29772699_127326765 
+			淘宝特卖：https://temai.m.taobao.com/new/index.htm?pid=mm_118760083_29772699_127326765
+			特卖搜索：https://temai.m.taobao.com/search.htm?pid=mm_118760083_29772699_127326765
+		爱淘宝：https://ai.taobao.com?pid=mm_118760083_29772699_127326765
+		https://ai.m.taobao.com/index.html?pid=mm_118760083_29772699_127326765
+		飞猪：https://s.click.taobao.com/t?e=m%3D2%26s%3DV8qEsTvspg0cQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAtT0vi0vFtF3gP494rOBEK5Oc261Wya0NDgDpDPh7D72ZTLv04DU5EA7lox%2BzP2Z%2BIK88P%2FKzi0kxxWvg6Zgs%2BufKdnhu%2B44hB9qAVPM25K0cj5d26O5JTnBV7GfGbfBR06AKI8EMgZwgGJ6r9DajuEo%2Bq0qHgj4%2Fr%2BOY9SrDkfyH5S%2BAXadU8u31WUvb1IPCiGFCzYOOqAQ
+		阿里云：https://s.click.taobao.com/t?e=m%3D2%26s%3DHfenF08cXikcQipKwQzePCperVdZeJviEViQ0P1Vf2kguMN8XjClAtT0vi0vFtF3FZXPm4I7DbFOc261Wya0NDgDpDPh7D72ZTLv04DU5EA7lox%2BzP2Z%2BBVF%2BG%2F2LD3qKIUZKvQyk4%2FkxFiXT%2FI5kdv2ej9RFznDI7hRLPtBsnnfiZ1OxkhRwDBkcElHipW7P37PZ5d3Efk3VTMPr8ftLkWbo0ZyKcLixiXvDf8DaRs%3D
+		
+		
+		  pc：
+		  
+		  爱淘宝优惠券：https://uland.taobao.com/coupon/list?pid=mm_118760083_29772699_127326765
+		  
+		
+		-->
 			
 		<frameset framespacing="0" border="0" rows="0" frameborder="0">
-<frame name="main" src="https://temai.m.taobao.com/new/index.htm?pid=mm_118760083_29772699_127326" scrolling="auto" noresize>
+<frame name="main" src="https://temai.m.taobao.com/new/index.htm?pid=mm_118760083_29772699_127326765" scrolling="auto" noresize>
 </frameset>
 		
 	
