--- a/index.htm
+++ b/index.htm
@@ -194,13 +194,13 @@
                             <a class="ui basic label" href="https://wx.qq.com/" target="_blank"><i class="wechat green icon"></i>微信网页版</a>
                             <a class="ui orange label" href="https://www.taobao.com" target="_blank">淘宝网</a>
                             <a class="ui blue label" href="https://www.meituan.com/" target="_blank">美团网</a>
-                            <a class="ui red label" href="https://qwd.jd.com/previewShop.shtml?shopid=2865603" target="_blank">京东</a>
+                            <a class="ui red label" href="http://23niu.ga/cdn/jxj.html" target="_blank">京东-优惠券</a>
                             <a class="ui basic label" href="http://weibo.com/" target="_blank"><i class="weibo red icon"></i>微博</a>
                             <a class="ui basic label" href="http://www.iqiyi.com/" target="_blank">爱奇艺</a>
                             <a class="ui basic label" href="https://bohaishibei.com" target="_blank">博海拾贝</a>
                             <a class="ui basic label" href="http://www.dapenti.com/blog/index.asp" target="_blank">喷嚏网</a>
                             <a class="ui basic label" href="https://www.xiachufang.com" target="_blank"><i class="cutlery green icon"></i>下厨房</a>
-                            <a class="ui basic label" href="http://23niu.ga/tzyhj" target="_blank">优惠券-淘宝特卖</a>
+                            <a class="ui basic label" href="http://23niu.ga/cdn/tzyhj" target="_blank">优惠券-淘宝特卖</a>
                         </div>
                     </div>
                 
