--- a/zdsx/index.html
+++ b/zdsx/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="refresh" content="5">
-		<frameset>
-<frame src="http://www.baidu.com" name="iframe">
+		<frameset cols="25%,75%">
+<frame src="http://www.2345.com/?kqzmp483" name="iframe"  width="200" height="200">
+<frame src="http://kan.2345.com/?kqzmp483" name="iframe"  width="200" height="200">
 </frameset></frameset>
 		<title></title>
 	</head>
